--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "matchit"]
 	path = plugins/matchit
 	url = https://github.com/tmhedberg/matchit.git
+[submodule "vim-ruby-refactoring"]
+	path = plugins/vim-ruby-refactoring
+	url = https://github.com/ecomba/vim-ruby-refactoring.git
