--- a/tmux.conf
+++ b/tmux.conf
@@ -2,6 +2,12 @@
 set-option -g prefix C-@
 bind-key C-@ last-window
 
+# First window should be 1 (easier acces on number row)
+set -g base-index 1
+
+# Faster repetition
+set -s escape-time 0
+
 # status bar
 set -g status-utf8 on
 set -g status-bg black
