--- a/tmux.conf
+++ b/tmux.conf
@@ -8,6 +8,12 @@ set -g base-index 1
 # Faster repetition
 set -s escape-time 0
 
+# A little help to the annoying window resizes
+setw -g aggressive-resize on
+
+# Highlighting the active window
+set-window-option -g window-status-current-fg cyan
+
 # status bar
 set -g status-utf8 on
 set -g status-bg black
