--- a/tmux.conf
+++ b/tmux.conf
@@ -14,6 +14,23 @@ setw -g aggressive-resize on
 # Highlighting the active window
 set-window-option -g window-status-current-fg cyan
 
+# vi is our religion
+set-window-option -g mode-keys vi
+
+# vim stuff for vi mode
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
+
+# vim movements for pane switching
+unbind-key j
+unbind-key k
+unbind-key h
+unbind-key l
+bind-key -r j select-pane -D
+bind-key -r k select-pane -U
+bind-key -r h select-pane -L
+bind-key -r l select-pane -R
+
 # status bar
 set -g status-utf8 on
 set -g status-bg black
