Pane splitting and mouse mode.

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,7 @@
-# Faster prefix
+# Faster prefixing
 set-option -g prefix C-@
 bind-key C-@ last-window
+unbind-key C-b
 
 # First window should be 1 (easier acces on number row)
 set -g base-index 1
@@ -31,6 +32,10 @@ bind-key -r k select-pane -U
 bind-key -r h select-pane -L
 bind-key -r l select-pane -R
 
+# pane splitting
+bind-key \ split-window -h
+bind-key - split-window -v
+
 # status bar
 set -g status-utf8 on
 set -g status-bg black
@@ -44,4 +49,8 @@ set -g status-right-length 90
 set -g status-right '#[fg=yellow]#(cut -d " " -f 1 /proc/loadavg) #[default]%a %d %b'
 
 # Notifying if other windows has activities
+setw -g monitor-activity on
 set -g visual-activity on
+
+# Activate mouse for times when I am lazy
+set -g mode-mouse on
