Trying to add memory load, hm.

--- a/tmux.conf
+++ b/tmux.conf
@@ -46,7 +46,7 @@ set -g status-left '[#I:#P]'    # Show window:pane numbers
 set -g status-left '#[fg=colour237]#I:#P #[fg=red]#H'
 set -g status-justify centre
 set -g status-right-length 90
-set -g status-right '#[fg=yellow]#(cut -d " " -f 1 /proc/loadavg) #[default]%a %d %b'
+set -g status-right '#[fg=yellow]CPU: #[default]#(cut -d " " -f 1 /proc/loadavg) #[fg=yellow]Mem: #[default]#(egrep "MemFree" /proc/meminfo | cut -d " " -f 10)/#(egrep "MemTotal" /proc/meminfo | cut -d " " -f 9)'
 
 # Notifying if other windows has activities
 setw -g monitor-activity on
@@ -54,3 +54,10 @@ set -g visual-activity on
 
 # Activate mouse for times when I am lazy
 set -g mode-mouse on
+
+# reload the source
+bind r source-file ~/.tmux.conf
+
+# kill pane
+bind-key q confirm-before kill-pane
+bind-key Q kill-pane
