--- a/tmux.conf
+++ b/tmux.conf
@@ -37,6 +37,7 @@ bind-key \ split-window -h
 bind-key - split-window -v
 
 # status bar
+set -g status-position top
 set -g status-utf8 on
 set -g status-bg black
 set -g status-fg white
