--- a/tmux.conf
+++ b/tmux.conf
@@ -47,7 +47,7 @@ set -g status-left '[#I:#P]'    # Show window:pane numbers
 set -g status-left '#[fg=colour237]#I:#P #[fg=red]#H'
 set -g status-justify centre
 set -g status-right-length 90
-set -g status-right '#[fg=yellow]CPU: #[default]#(cut -d " " -f 1 /proc/loadavg) #[fg=yellow]Mem: #[default]#(egrep "MemFree" /proc/meminfo | cut -d " " -f 10)/#(egrep "MemTotal" /proc/meminfo | cut -d " " -f 9)'
+set -g status-right '#[fg=yellow]CPU: #[default]#(cut -d " " -f 1 /proc/loadavg) #[fg=yellow]Mem: #[default]#(~/.tmux/memstats.sh)'
 
 # Notifying if other windows has activities
 setw -g monitor-activity on
