--- a/tmux.conf
+++ b/tmux.conf
@@ -12,8 +12,19 @@ set -s escape-time 0
 # A little help to the annoying window resizes
 setw -g aggressive-resize on
 
-# Highlighting the active window
+# Notifications
+setw -g monitor-activity on
+set -g visual-activity off
+
 set-window-option -g window-status-current-fg cyan
+set-window-option -g window-status-bell-fg red
+set-window-option -g window-status-bell-bg black
+set-window-option -g window-status-content-fg yellow
+set-window-option -g window-status-content-bg black
+# bg and fg are switched...
+set-window-option -g window-status-activity-fg black
+set-window-option -g window-status-activity-bg yellow
+
 
 # vi is our religion
 set-window-option -g mode-keys vi
@@ -49,16 +60,11 @@ set -g status-justify centre
 set -g status-right-length 90
 set -g status-right '#[fg=yellow]CPU: #[default]#(cut -d " " -f 1 /proc/loadavg) #[fg=yellow]Mem: #[default]#(~/.tmux/memstats.sh)'
 
-# Notifying if other windows has activities
-setw -g monitor-activity on
-set -g visual-activity on
-
 # Activate mouse for times when I am lazy
 set -g mode-mouse on
 
 # reload the source
 bind r source-file ~/.tmux.conf
 
-# kill pane
-bind-key q confirm-before kill-pane
+# kill pane without confirmation prompt
 bind-key Q kill-pane
