--- a/tmux.conf
+++ b/tmux.conf
@@ -47,6 +47,10 @@ bind-key -r l select-pane -R
 bind-key \ split-window -h
 bind-key - split-window -v
 
+# additional window movements, just like tab movement in vim
+bind-key -r C-L next-window
+bind-key -r C-H previous-window
+
 # status bar
 set -g status-position top
 set -g status-utf8 on
