Disables mouse and names the sub session.

--- a/tmux.conf
+++ b/tmux.conf
@@ -65,7 +65,7 @@ set -g status-right-length 90
 set -g status-right '#[fg=yellow]CPU: #[default]#(cut -d " " -f 1 /proc/loadavg) #[fg=yellow]Mem: #[default]#(~/.tmux/memstats.sh)'
 
 # Activate mouse for times when I am lazy
-set -g mode-mouse on
+#set -g mode-mouse on
 
 # reload the source
 bind r source-file ~/.tmux.conf
