--- a/tmux.conf
+++ b/tmux.conf
@@ -16,12 +16,12 @@ setw -g aggressive-resize on
 setw -g monitor-activity on
 set -g visual-activity off
 
-set-window-option -g window-status-current-fg cyan
-set-window-option -g window-status-bell-fg red
-set-window-option -g window-status-bell-bg black
-set-window-option -g window-status-content-fg yellow
-set-window-option -g window-status-content-bg black
+set-window-option -g window-status-current-fg colour226
 # bg and fg are switched...
+set-window-option -g window-status-bell-bg red
+set-window-option -g window-status-bell-fg black
+set-window-option -g window-status-content-bg yellow
+set-window-option -g window-status-content-fg black
 set-window-option -g window-status-activity-fg black
 set-window-option -g window-status-activity-bg yellow
 
@@ -59,7 +59,7 @@ set -g status-fg white
 set -g status-interval 60
 set -g status-left-length 30
 set -g status-left '[#I:#P]'    # Show window:pane numbers
-set -g status-left '#[fg=colour237]#I:#P #[fg=red]#H'
+set -g status-left '#[fg=colour237]#I:#P #[fg=colour45]#H'
 set -g status-justify centre
 set -g status-right-length 90
 set -g status-right '#[fg=yellow]CPU: #[default]#(cut -d " " -f 1 /proc/loadavg) #[fg=yellow]Mem: #[default]#(~/.tmux/memstats.sh)'
