--- a/tmux.conf
+++ b/tmux.conf
@@ -17,13 +17,17 @@ setw -g monitor-activity on
 set -g visual-activity off
 
 set-window-option -g window-status-current-fg colour226
-# bg and fg are switched...
-set-window-option -g window-status-bell-bg red
-set-window-option -g window-status-bell-fg black
-set-window-option -g window-status-content-bg yellow
-set-window-option -g window-status-content-fg black
-set-window-option -g window-status-activity-fg black
-set-window-option -g window-status-activity-bg yellow
+# The status colors are reversed by default, that's why we
+# switch their style attributes to none
+set-window-option -g window-status-bell-attr none
+set-window-option -g window-status-bell-fg red
+set-window-option -g window-status-bell-bg black
+set-window-option -g window-status-content-attr none
+set-window-option -g window-status-content-fg yellow
+set-window-option -g window-status-content-bg black
+set-window-option -g window-status-activity-attr none
+set-window-option -g window-status-activity-fg yellow
+set-window-option -g window-status-activity-bg black
 
 
 # vi is our religion
