Adds a comment to tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -29,7 +29,6 @@ set-window-option -g window-status-activity-attr none
 set-window-option -g window-status-activity-fg yellow
 set-window-option -g window-status-activity-bg black
 
-
 # vi is our religion
 set-window-option -g mode-keys vi
 
@@ -69,6 +68,7 @@ set -g status-right-length 90
 set -g status-right '#[fg=yellow]CPU: #[default]#(cut -d " " -f 1 /proc/loadavg) #[fg=yellow]Mem: #[default]#(~/.tmux/memstats.sh)'
 
 # Activate mouse for times when I am lazy
+# Beware, it disables copy and paste through the middle mouse button
 #set -g mode-mouse on
 
 # reload the source
