--- a/tmux.conf
+++ b/tmux.conf
@@ -5,6 +5,7 @@ unbind-key C-b
 
 # First window should be 1 (easier acces on number row)
 set -g base-index 1
+set -g pane-base-index 1
 
 # Faster repetition
 set -s escape-time 0
@@ -57,12 +58,11 @@ bind-key -r C-H previous-window
 # status bar
 set -g status-position top
 set -g status-utf8 on
-set -g status-bg black
+set -g status-bg colour233
 set -g status-fg white
-set -g status-interval 60
+#set -g status-interval 60 # leave the default 15
 set -g status-left-length 30
-set -g status-left '[#I:#P]'    # Show window:pane numbers
-set -g status-left '#[fg=colour237]#I:#P #[fg=colour45]#H'
+set -g status-left '#[fg=colour248]#I:#P #[fg=colour45]#H'
 set -g status-justify centre
 set -g status-right-length 90
 set -g status-right '#[fg=yellow]CPU: #[default]#(cut -d " " -f 1 /proc/loadavg) #[fg=yellow]Mem: #[default]#(~/.tmux/memstats.sh)'
