--- a/tmux.conf
+++ b/tmux.conf
@@ -4,11 +4,12 @@ bind-key C-@ last-window
 unbind-key C-b
 
 # First window should be 1 (easier acces on number row)
+
 set -g base-index 1
 set -g pane-base-index 1
 
 # Faster repetition
-set -s escape-time 0
+set -sg escape-time 1
 
 # A little help to the annoying window resizes
 setw -g aggressive-resize on
@@ -58,7 +59,7 @@ bind-key -r C-H previous-window
 # status bar
 set -g status-position top
 set -g status-utf8 on
-set -g status-bg colour233
+set -g status-bg default # same as terminal bg
 set -g status-fg white
 #set -g status-interval 60 # leave the default 15
 set -g status-left-length 30
