--- a/tmux.conf
+++ b/tmux.conf
@@ -34,9 +34,12 @@ set-window-option -g window-status-activity-bg black
 # vi is our religion
 set-window-option -g mode-keys vi
 
-# vim stuff for vi mode
+# vim stuff for vi mode, copy and pasting
 bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-selection
+unbind-key ]
+bind-key p paste-buffer
+bind y run-shell "echo -n $(tmux show-buffer) | xclip -sel clip -i"; display-message "Copied tmux buffer to system clipboard"
 
 # vim movements for pane switching
 unbind-key j
@@ -70,10 +73,10 @@ set -g status-right '#[fg=yellow]CPU: #[default]#(cut -d " " -f 1 /proc/loadavg)
 
 # Activate mouse for times when I am lazy
 # Beware, it disables copy and paste through the middle mouse button
-#set -g mode-mouse on
+#set -g mode-mousekon
 
 # reload the source
-bind r source-file ~/.tmux.conf
+ind r source-file ~/.tmux.conf; display-message 'Reloaded tmux configuration'
 
 # kill pane without confirmation prompt
 bind-key Q kill-pane
