Syntax upgrades and mouse mode toggling.

--- a/tmux.conf
+++ b/tmux.conf
@@ -39,7 +39,9 @@ bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-selection
 unbind-key ]
 bind-key p paste-buffer
-bind y run-shell "echo -n $(tmux show-buffer) | xclip -sel clip -i"; display-message "Copied tmux buffer to system clipboard"
+bind y \
+  run-shell -b "echo -n $(tmux show-buffer) | xclip -sel clip -i" \;\
+  display "Copied tmux buffer to system clipboard"
 
 # vim movements for pane switching
 unbind-key j
@@ -75,8 +77,24 @@ set -g status-right '#[fg=yellow]CPU: #[default]#(cut -d " " -f 1 /proc/loadavg)
 # Beware, it disables copy and paste through the middle mouse button
 #set -g mode-mousekon
 
+# Toggle mouse on
+bind m \
+  set -g mode-mouse on \;\
+  set -g mouse-resize-pane on \;\
+  set -g mouse-select-pane on \;\
+  set -g mouse-select-window on \;\
+  display 'Mouse: ON'
+
+# Toggle mouse off
+bind M \
+  set -g mode-mouse off \;\
+  set -g mouse-resize-pane off \;\
+  set -g mouse-select-pane off \;\
+  set -g mouse-select-window off \;\
+  display 'Mouse: OFF'
+
 # reload the source
-ind r source-file ~/.tmux.conf; display-message 'Reloaded tmux configuration'
+bind r source-file ~/.tmux.conf; display 'Reloaded tmux configuration'
 
 # kill pane without confirmation prompt
 bind-key Q kill-pane
