--- a/tmux.conf
+++ b/tmux.conf
@@ -4,7 +4,6 @@ bind-key C-@ last-window
 unbind-key C-b
 
 # First window should be 1 (easier acces on number row)
-
 set -g base-index 1
 set -g pane-base-index 1
 
@@ -18,19 +17,6 @@ setw -g aggressive-resize on
 setw -g monitor-activity on
 set -g visual-activity off
 
-set-window-option -g window-status-current-fg colour226
-# The status colors are reversed by default, that's why we
-# switch their style attributes to none
-set-window-option -g window-status-bell-attr none
-set-window-option -g window-status-bell-fg red
-set-window-option -g window-status-bell-bg black
-set-window-option -g window-status-content-attr none
-set-window-option -g window-status-content-fg yellow
-set-window-option -g window-status-content-bg black
-set-window-option -g window-status-activity-attr none
-set-window-option -g window-status-activity-fg yellow
-set-window-option -g window-status-activity-bg black
-
 # vi is our religion
 set-window-option -g mode-keys vi
 
@@ -39,6 +25,7 @@ bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-selection
 unbind-key ]
 bind-key p paste-buffer
+# following echo is to copy no newline char
 bind y \
   run-shell -b "echo -n $(tmux show-buffer) | xclip -sel clip -i" \;\
   display "Copied tmux buffer to system clipboard"
@@ -61,7 +48,7 @@ bind-key - split-window -v
 bind-key -r C-L next-window
 bind-key -r C-H previous-window
 
-# status bar
+# Status bar and general style
 set -g status-position top
 set -g status-utf8 on
 set -g status-bg default # same as terminal bg
@@ -73,9 +60,20 @@ set -g status-justify centre
 set -g status-right-length 90
 set -g status-right '#[fg=yellow]CPU: #[default]#(cut -d " " -f 1 /proc/loadavg) #[fg=yellow]Mem: #[default]#(~/.tmux/memstats.sh)'
 
-# Activate mouse for times when I am lazy
-# Beware, it disables copy and paste through the middle mouse button
-#set -g mode-mousekon
+set-window-option -g window-status-current-fg colour226
+# The status colors are reversed by default, that's why we
+# switch their style attributes to none
+setw -g window-status-bell-attr none
+setw -g window-status-bell-fg red
+setw -g window-status-bell-bg black
+setw -g window-status-content-attr none
+setw -g window-status-content-fg yellow
+setw -g window-status-content-bg black
+setw -g window-status-activity-attr none
+setw -g window-status-activity-fg yellow
+setw -g window-status-activity-bg black
+# Time status line messages get shown
+set -g display-time 1250
 
 # Toggle mouse on
 bind m \
@@ -83,7 +81,7 @@ bind m \
   set -g mouse-resize-pane on \;\
   set -g mouse-select-pane on \;\
   set -g mouse-select-window on \;\
-  display 'Mouse: ON'
+  display 'Mouse enabled'
 
 # Toggle mouse off
 bind M \
@@ -91,7 +89,7 @@ bind M \
   set -g mouse-resize-pane off \;\
   set -g mouse-select-pane off \;\
   set -g mouse-select-window off \;\
-  display 'Mouse: OFF'
+  display 'Mouse disabled'
 
 # reload the source
 bind r source-file ~/.tmux.conf; display 'Reloaded tmux configuration'
