Applying a uniform terminology.

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,13 @@
+# Remember that tmux is heavily aliased
+# bind == bind-key
+# set  == set-option
+# setw == set-window-option
+# etc.
+
 # Faster prefixing
-set-option -g prefix C-@
-bind-key C-@ last-window
-unbind-key C-b
+set -g prefix C-@
+bind C-@ last-window
+unbind C-b
 
 # First window should be 1 (easier acces on number row)
 set -g base-index 1
@@ -18,35 +24,35 @@ setw -g monitor-activity on
 set -g visual-activity off
 
 # vi is our religion
-set-window-option -g mode-keys vi
+setw -g mode-keys vi
 
 # vim stuff for vi mode, copy and pasting
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
-unbind-key ]
-bind-key p paste-buffer
+bind -t vi-copy 'v' begin-selection
+bind -t vi-copy 'y' copy-selection
+unbind ]
+bind p paste-buffer
 # following echo is to copy no newline char
 bind y \
-  run-shell -b "echo -n $(tmux show-buffer) | xclip -sel clip -i" \;\
+  run -b "echo -n $(tmux show-buffer) | xclip -sel clip -i" \;\
   display "Copied tmux buffer to system clipboard"
 
 # vim movements for pane switching
-unbind-key j
-unbind-key k
-unbind-key h
-unbind-key l
-bind-key -r j select-pane -D
-bind-key -r k select-pane -U
-bind-key -r h select-pane -L
-bind-key -r l select-pane -R
+unbind j
+unbind k
+unbind h
+unbind l
+bind -r j select-pane -D
+bind -r k select-pane -U
+bind -r h select-pane -L
+bind -r l select-pane -R
 
 # pane splitting
-bind-key \ split-window -h
-bind-key - split-window -v
+bind \ split-window -h
+bind - split-window -v
 
 # additional window movements, just like tab movement in vim
-bind-key -r C-L next-window
-bind-key -r C-H previous-window
+bind -r C-L next-window
+bind -r C-H previous-window
 
 # Status bar and general style
 set -g status-position top
@@ -95,4 +101,4 @@ bind M \
 bind r source-file ~/.tmux.conf; display 'Reloaded tmux configuration'
 
 # kill pane without confirmation prompt
-bind-key Q kill-pane
+bind Q kill-pane
