--- a/tmux.conf
+++ b/tmux.conf
@@ -29,6 +29,7 @@ setw -g mode-keys vi
 # vim stuff for vi mode, copy and pasting
 bind -t vi-copy 'v' begin-selection
 bind -t vi-copy 'y' copy-selection
+bind -t vi-copy 'Y' copy-end-of-line
 unbind ]
 bind p paste-buffer
 # following echo is to copy no newline char
@@ -41,10 +42,12 @@ unbind j
 unbind k
 unbind h
 unbind l
-bind -r j select-pane -D
-bind -r k select-pane -U
-bind -r h select-pane -L
-bind -r l select-pane -R
+# these movements had -r before, which causes a slight delay,
+# when going only one step, therefore scratched
+bind j select-pane -D
+bind k select-pane -U
+bind h select-pane -L
+bind l select-pane -R
 
 # pane splitting
 bind \ split-window -h
