Toggling mouse with a conditional in tmux.

--- a/tmux.conf
+++ b/tmux.conf
@@ -84,21 +84,23 @@ setw -g window-status-activity-bg black
 # Time status line messages get shown
 set -g display-time 1250
 
-# Toggle mouse on
+# Toggle mouse on and off
+#
+# Take note, these are two multiline strings.
+# We cannot query for the mouse mode itself it seems, that's why
+# we need to ask for another value.
 bind m \
-  set -g mode-mouse on \;\
-  set -g mouse-resize-pane on \;\
-  set -g mouse-select-pane on \;\
-  set -g mouse-select-window on \;\
-  display 'Mouse enabled'
-
-# Toggle mouse off
-bind M \
-  set -g mode-mouse off \;\
-  set -g mouse-resize-pane off \;\
-  set -g mouse-select-pane off \;\
-  set -g mouse-select-window off \;\
-  display 'Mouse disabled'
+  if '[ "`tmux show -g -v mouse-select-pane`" = "off" ]'\
+    "set -g mode-mouse on;\
+     set -g mouse-resize-pane on;\
+     set -g mouse-select-pane on;\
+     set -g mouse-select-window on;\
+     display 'Mouse enabled'" \
+    "set -g mode-mouse off;\
+     set -g mouse-resize-pane off;\
+     set -g mouse-select-pane off;\
+     set -g mouse-select-window off;\
+     display 'Mouse disabled'"
 
 # reload the source
 bind r source-file ~/.tmux.conf; display 'Reloaded tmux configuration'
