Typo in tmux.conf.

--- a/tmux.conf
+++ b/tmux.conf
@@ -103,7 +103,7 @@ bind m \
      display 'Mouse disabled'"
 
 # reload the source
-bind r source-file ~/.tmux.conf; display 'Reloaded tmux configuration'
+bind r source-file ~/.tmux.conf\; display 'Reloaded tmux configuration'
 
 # kill pane without confirmation prompt
 bind Q kill-pane
