--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "plugins/vim-airline"]
 	path = plugins/vim-airline
 	url = https://github.com/bling/vim-airline.git
+[submodule "plugins/vim-startify"]
+	path = plugins/vim-startify
+	url = https://github.com/mhinz/vim-startify.git
