More scrollback in tmux.

--- a/tmux.conf
+++ b/tmux.conf
@@ -13,6 +13,9 @@ unbind C-b
 set -g base-index 1
 set -g pane-base-index 1
 
+# A little more history (default is 2000)
+set -g history-limit 5000
+
 # Faster repetition
 set -sg escape-time 1
 
