Adds a debug pane binding to tmux.

--- a/tmux.conf
+++ b/tmux.conf
@@ -110,3 +110,6 @@ bind r source-file ~/.tmux.conf\; display 'Reloaded tmux configuration'
 
 # kill pane without confirmation prompt
 bind Q kill-pane
+
+# open a little debug pane on the bottom
+bind b split-window -v -p 15
