Key to send tmux prefix to inner session.

--- a/tmux.conf
+++ b/tmux.conf
@@ -9,6 +9,9 @@ set -g prefix C-@
 bind C-@ last-window
 unbind C-b
 
+# send prefix to inner session
+bind a send-prefix
+
 # First window should be 1 (easier acces on number row)
 set -g base-index 1
 set -g pane-base-index 1
