--- a/.gitmodules
+++ b/.gitmodules
@@ -36,7 +36,7 @@
 	url = https://github.com/tpope/vim-fireplace.git
 [submodule "plugins/vim-gitgutter"]
 	path = plugins/vim-gitgutter
-	url = https://github.com/airblade/vim-gitgutter.git
+	url = git@github.com:airblade/vim-gitgutter.git
 [submodule "plugins/vim-airline"]
 	path = plugins/vim-airline
 	url = https://github.com/bling/vim-airline.git
