--- a/.gitmodules
+++ b/.gitmodules
@@ -55,3 +55,6 @@
 [submodule "oh-my-zsh"]
 	path = oh-my-zsh
 	url = git@github.com:LFDM/oh-my-zsh.git
+[submodule "plugins/indentLine"]
+	path = plugins/indentLine
+	url = git@github.com:Yggdroot/indentLine.git
