Adds vim-blocke

--- a/.gitmodules
+++ b/.gitmodules
@@ -61,3 +61,6 @@
 [submodule "plugins/camelcasemotion"]
 	path = plugins/camelcasemotion
 	url = git@github.com:vim-scripts/camelcasemotion.git
+[submodule "plugins/vim-blockle"]
+	path = plugins/vim-blockle
+	url = git@github.com:jgdavey/vim-blockle.git
