--- a/.gitmodules
+++ b/.gitmodules
@@ -79,3 +79,6 @@
 [submodule "plugins/YankRing.vim"]
 	path = plugins/YankRing.vim
 	url = git@github.com:vim-scripts/YankRing.vim.git
+[submodule "plugins/vim-easymotion"]
+	path = plugins/vim-easymotion
+	url = git@github.com:Lokaltog/vim-easymotion.git
