--- a/.gitmodules
+++ b/.gitmodules
@@ -118,3 +118,12 @@
 [submodule "plugins/vim-ghi"]
 	path = plugins/vim-ghi
 	url = git@github.com:LFDM/vim-ghi.git
+[submodule "plugins/vim-javascript"]
+	path = plugins/vim-javascript
+	url = git@github.com:pangloss/vim-javascript.git
+[submodule "plugins/emmet-vim"]
+	path = plugins/emmet-vim
+	url = git@github.com:mattn/emmet-vim.git
+[submodule "plugins/jshint2.vim"]
+	path = plugins/jshint2.vim
+	url = git@github.com:Shutnik/jshint2.vim.git
