Add tern_for_vim plugin

--- a/.gitmodules
+++ b/.gitmodules
@@ -130,3 +130,6 @@
 [submodule "plugins/cosco.vim"]
 	path = plugins/cosco.vim
 	url = git@github.com:lfilho/cosco.vim.git
+[submodule "plugins/tern_for_vim"]
+	path = plugins/tern_for_vim
+	url = git@github.com:marijnh/tern_for_vim.git
