--- a/tmux.conf
+++ b/tmux.conf
@@ -55,9 +55,11 @@ bind k select-pane -U
 bind h select-pane -L
 bind l select-pane -R
 
-# pane splitting
-bind \ split-window -h
-bind - split-window -v
+# new panes and windows - newer tmux version need us to declare
+# the starting directory manually
+bind \ split-window -h -c '#{pane_current_path}'
+bind - split-window -v -c '#{pane_current_path}'
+bind c new-window -c '#{pane_current_path}'
 
 # additional window movements, just like tab movement in vim
 bind -r C-L next-window
