Add ctrlp_custom_modes vim plugin

--- a/.gitmodules
+++ b/.gitmodules
@@ -136,3 +136,6 @@
 [submodule "util/tig"]
 	path = util/tig
 	url = https://github.com/jonas/tig
+[submodule "plugins/ctrlp_custom_modes"]
+	path = plugins/ctrlp_custom_modes
+	url = git@github.com:LFDM/ctrlp_custom_modes.git
