Add localvimrc plugin

--- a/.gitmodules
+++ b/.gitmodules
@@ -145,3 +145,6 @@
 [submodule "plugins/ctrlp-py-matcher"]
 	path = plugins/ctrlp-py-matcher
 	url = git@github.com:FelikZ/ctrlp-py-matcher.git
+[submodule "plugins/vim-localvimrc"]
+	path = plugins/vim-localvimrc
+	url = git@github.com:embear/vim-localvimrc.git
