--- a/.gitmodules
+++ b/.gitmodules
@@ -157,6 +157,12 @@
 [submodule "plugins/vim-textobj-flow"]
 	path = plugins/vim-textobj-flow
 	url = git@github.com:LFDM/vim-textobj-flow.git
+[submodule "plugins/vim-jsx"]
+	path = plugins/vim-jsx
+	url = git@github.com:mxw/vim-jsx.git
 [submodule "plugins/vim-lookup"]
 	path = plugins/vim-lookup
 	url = git@github.com:LFDM/vim-lookup.git
+[submodule "plugins/vim-node"]
+	path = plugins/vim-node
+	url = git@github.com:moll/vim-node.git
