Split b window with current directory

--- a/tmux.conf
+++ b/tmux.conf
@@ -117,4 +117,4 @@ bind r source-file ~/.tmux.conf\; display 'Reloaded tmux configuration'
 bind Q kill-pane
 
 # open a little debug pane on the bottom
-bind b split-window -v -p 20
+bind b split-window -v -p 20 -c '#{pane_current_path}'
